Fix css - added scrollbar on list view for small screens

--- a/Resources/public/css/layout.css
+++ b/Resources/public/css/layout.css
@@ -339,5 +339,6 @@ legend.sonata-ba-fieldset-collapsed-description + .sonata-ba-collapsed-fields {
 }
 
 .box .box-body {
-    overflow: hidden;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
